--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -72,50 +72,50 @@ body {
     height: 48px;
     text-align: right
 }
-
-footer #nsf-logo {
-    flex-shrink: 0;
-    margin-right:20px
-}
-
-footer #nsf-logo img {
-    width:150px
-}
-
-footer .footer-text {
-    list-style: none;
-    padding: 0px 1rem;
-    font-stretch: 100%;
-    text-size-adjust: 100%
-}
-
-footer .footer-text a {
-    font-weight: 700;
-    font-stretch: 100%;
-    text-transform: none;
-    text-decoration: none;
-    color: var(--bs-secondary);
-    font-size: 1.1rem;
-}
-
-footer .footer-text a:hover {
-    text-decoration:underline
-}
-
-footer .footer-contact a {
-    font-stretch: 70% !important;
-    font-weight: 700;
-    font-size: 14px;
-}
-
-footer .footer-logo img {
-    height:30px;
-    width:auto
-}
-
-footer .footer-policies a:link {
-    color: var(--bs-body-color)
-}
+//
+//footer #nsf-logo {
+//    flex-shrink: 0;
+//    margin-right:20px
+//}
+//
+//footer #nsf-logo img {
+//    width:150px
+//}
+//
+//footer .footer-text {
+//    list-style: none;
+//    padding: 0px 1rem;
+//    font-stretch: 100%;
+//    text-size-adjust: 100%
+//}
+//
+//footer .footer-text a {
+//    font-weight: 700;
+//    font-stretch: 100%;
+//    text-transform: none;
+//    text-decoration: none;
+//    color: var(--bs-secondary);
+//    font-size: 1.1rem;
+//}
+//
+//footer .footer-text a:hover {
+//    text-decoration:underline
+//}
+//
+//footer .footer-contact a {
+//    font-stretch: 70% !important;
+//    font-weight: 700;
+//    font-size: 14px;
+//}
+//
+//footer .footer-logo img {
+//    height:30px;
+//    width:auto
+//}
+//
+//footer .footer-policies a:link {
+//    color: var(--bs-body-color)
+//}
 
 footer .social-link {
     text-decoration: none;
@@ -132,6 +132,22 @@ footer .social-link svg {
 
 footer .social-link:hover {
     transform:scale(1.1)
+}
+
+footer {
+
+    .footer-policies a, .read-more, footer-rights {
+        font-size: 14px;
+    }
+
+    a {
+        color: $access-medium;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .btn-access-primary {
