--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -166,30 +166,6 @@ footer {
         line-height: 10px;
     }
 
-    //ul.sf-menu li.menuparent a {
-    //    &:hover, &:active, &:focus {
-    //        color: $access-medium;
-    //        background-color: $access-dark;
-    //    }
-    //}
-    //
-    //ul.sf-menu a{
-    //
-    //    padding: 16px 8px;
-    //    text-decoration: none;
-    //    font-weight: 700;
-    //
-    //    &:hover, &:active, &:focus {
-    //        color: $access-medium;
-    //        background-color: $access-dark;
-    //    }
-    //
-    //    color: var(--bs-white);
-    //    background-color: $access-dark;
-    //    font-size: 14px;
-    //}
-
-
     ul {
         @extend .d-inline-block;
         @extend .list-inline;
@@ -201,6 +177,34 @@ footer {
                 display: none;
             }
 
+            a, span.nolink {
+                background-color: $access-medium;
+                color: $access-light;
+
+                text-decoration: none;
+                font-weight: 600;
+                font-size: 16px;
+                padding: 16px 24px;
+
+                &.sf-depth-1 {
+                    color: $access-dark;
+                    background-color: white;
+                }
+
+                &:hover {
+                    background-color: $access-medium;
+                    color: $access-light;
+
+                    text-decoration: underline;
+                    font-weight: 600;
+                }
+
+                &.active, &.is-active {
+                    background-color: $access-dark;
+                    color: $access-light;
+                }
+            }
+
             &.sfHover {
                 a, span.nolink {
                     background-color: $access-medium;
@@ -208,54 +212,8 @@ footer {
                 }
             }
         }
-
-    }
-
-    a,
-    span.nolink {
-
-        &.sf-depth-1 {
-            color: $access-dark;
-            background-color: white;
-
-            &:hover {
-                background-color: $access-medium;
-                color: $access-light;
-
-                text-decoration: underline;
-                font-weight: 600;
-            }
-
-            &.active, &.is-active {
-                background-color: $access-dark;
-                color: $access-light;
-            }
-        }
-
-        background-color: $access-medium;
-        color: $access-light;
-
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 16px;
-        padding: 6px 10px;
-        display: inline-block;
-
-        &:hover {
-            background-color: $access-medium;
-            color: $access-light;
-
-            text-decoration: underline;
-            font-weight: 600;
-        }
-
-        &.active, &.is-active {
-            background-color: $access-dark;
-            color: $access-light;
-        }
     }
 }
-
 
 .navbar-brand .site-logo {
     padding-top: 60px;
