Improve footer styles

--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -125,12 +125,12 @@
     <footer class="mt-auto {{ footer_classes }}" data-elastic-exclude="true">
         <div class="{{ b5_top_container }}">
             <div class="row pt-4">
-                <div class="col-lg-12 p-2">
+                <div class="col-md-2 col-sm-2 p-2 text-center">
                     <a href="https://www.nsf.gov/" id="nsf-logo" target="_blank">
-                        <img style="width: 89px" alt="National Science Foundation"
+                        <img style="max-width: 89px" alt="National Science Foundation" class="w-100"
                              src="/themes/contrib/b5_ac_conect/logos/NSF_4-Color_bitmap_Logo-150x150.png"></a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-8">
                     <p>ACCESS is an advanced computing and data resource supported by the <strong><a
                                     href="https://www.nsf.gov/" target="_blank">National Science Foundation</a></strong>
                         and made possible through these lead institutions and their partners — <strong><a
@@ -146,7 +146,7 @@
                     </a>
                 </div>
 
-                <div class="col-md-6 text-center">
+                <div class="col-md-4 col-sm-2 text-center">
                     <a class="social-link" href="https://twitter.com/ACCESSforCI">
                         <svg aria-hidden="true" focusable="false" height="24" version="1.1" viewBox="0 0 24 24"
                              width="24" xmlns="http://www.w3.org/2000/svg">
